--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/ztaintian/koa/issues"
   },
-  "homepage": "https://github.com/ztaintian/koa#readme"
+  "homepage": "https://github.com/ztaintian/koa#readme",
+  "dependencies": {
+    "koa": "^2.7.0",
+    "koa-body": "^4.1.0",
+    "koa-router": "^7.4.0",
+    "mysql": "^2.17.1"
+  }
 }
